# swift

./: .gitignore  add-canonical.sil  add.swift  string  string.swift  swiftc
include/swift/AST/: ASTWalker.h  Decl.h  DeclContext.h  Expr.h  Module.h  ProtocolConformanceRef.h
include/swift/SIL/: SILFunction.h  SILLocation.h  SILModule.h
include/swift/WALASupport/: BasicBlockLabeller.h  InstrKindInfoGetter.h  SILWalaInstructionVisitor.h  SymbolTable.h  WALAWalker.h
lib/: CMakeLists.txt
lib/FrontendTool/: CMakeLists.txt  FrontendTool.cpp
lib/WALASupport/: BasicBlockLabeller.cpp  CMakeLists.txt  InstrKindInfoGetter.cpp  SILWalaInstructionVisitor.cpp  SymbolTable.cpp  WALAWalker.cpp
stdlib/public/core/: Codable.swift  String.swift
testFiles/: test35-protocolExtension.swift  test35-switchValue.swift  test36-Enum.swift
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt
tools/swift-ide-test/: CMakeLists.txt
tools/swift-remoteast-test/: CMakeLists.txt
tools/swiftc-swig-bindings/: CMakeLists.txt  README.md  Test.java  build_lib  example.i  link_cmd  run_cmd  swiftc.i  swiftc_hacks.cpp  test.swift
unittests/AST/: CMakeLists.txt
unittests/Basic/: CMakeLists.txt
unittests/Driver/: CMakeLists.txt
unittests/IDE/: CMakeLists.txt
unittests/Parse/: CMakeLists.txt
unittests/SourceKit/Support/: CMakeLists.txt
unittests/SourceKit/SwiftLang/: CMakeLists.txt
unittests/SwiftDemangle/: CMakeLists.txt
unittests/Syntax/: CMakeLists.txt
unittests/runtime/: CMakeLists.txt
unittests/runtime/LongTests/: CMakeLists.txt
validation-test/compiler_crashers_fixed/: 28670-reftype-hastypeparameter-cannot-have-a-dependent-type-here.swift
wala-tests/: addString.swift  add_int.swift  block.swift  if.swift  julian.swift  operators.swift
wala-tests/ApplyInst/: Constructor.swift  Extension.swift  builtin_withtou_metadata.swift
wala-tests/IntegerLiterals/: int_decl.swift  uint_decl.swift
wala-tests/StringLiterals/: test.swift
